--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91624555-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-91624555-1');
+    </script>
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
@@ -20,10 +30,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Carlos Silva</title>
+    <meta name="description" content="Carlos Silva Engenheiro de Produção e Pós-graduando em Engenharia de Software.">
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      Você Precisa ativar o <br>JavaScript</br> em seu navegador, caso você não saiba o que é <br>JavaScript</br> faça um favor a si mesmo, e instale o <br>Google Chrome</br> ou <br>Mozilla Firefox</br> agora mesmo.
     </noscript>
     <div id="root"></div>
     <!--
