reduced image sized

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,14 @@
     -->
     <title>Carlos Silva</title>
     <meta name="description" content="Carlos Silva Engenheiro de Produção e Pós-graduando em Engenharia de Software.">
+    <!-- Facebook Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://carlosqsilva.github.io">
+    <meta property="og:title" content="Carlos Henrique Silva">
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.png">
+    <meta property="og:description" content="Engenheiro e Desenvolvedor Web">
+    <meta property="og:site_name" content="Carlos Henrique Silva">
+    <meta property="og:locale" content="pt_BR">
   </head>
   <body>
     <noscript>
