--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000">
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,700" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -35,7 +36,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://carlosqsilva.github.io">
     <meta property="og:title" content="Carlos Henrique Silva">
-    <meta property="og:image" content="%PUBLIC_URL%/favicon.png">
+    <meta property="og:image" content="%PUBLIC_URL%/icon.png">
     <meta property="og:description" content="Engenheiro e Desenvolvedor Web">
     <meta property="og:site_name" content="Carlos Henrique Silva">
     <meta property="og:locale" content="pt_BR">
