added project screenshot

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91624555-2"></script>
@@ -14,31 +14,28 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <!-- APPLE web app meta -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    
     <title>Carlos Silva</title>
     <meta name="description" content="Carlos Silva Engenheiro de Produção e Pós-graduando em Engenharia de Software.">
     <!-- Facebook Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://carlosqsilva.github.io">
+    <meta property="og:url" content="https://carloseng.com">
     <meta property="og:title" content="Carlos Henrique Silva">
     <meta property="og:image" content="%PUBLIC_URL%/icon.png">
-    <meta property="og:description" content="Engenheiro e Desenvolvedor Web">
-    <meta property="og:site_name" content="Carlos Henrique Silva">
+    <meta property="og:description" content="Carlos Silva Engenheiro de Produção e Pós-graduando em Engenharia de Software.">
+    <meta property="og:site_name" content="Carlos Silva Website">
     <meta property="og:locale" content="pt_BR">
   </head>
   <body>
